--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\hcost\\.virtualenvs\\hektorprofe.net-030W3dpx\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\hcost\\.virtualenvs\\docs_hektorprofe-ccO4Vrll\\Scripts\\python.exe",
     "editor.formatOnSave": false   
 }
