--- a/Pipfile
+++ b/Pipfile
@@ -1,4 +1,4 @@
-[[source]]
+[source]
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 mkdocs = "==1.0.4"
 mkdocs-material = "==3.0.6"
-Pygments = "==2.2.0"
+Pygments = ">=2.7.4"
 mkdocs-markdownextradata-plugin = "==0.0.5"
 django-htmlmin = "*"
 rcssmin = "*"
