--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -294,13 +294,11 @@ nav:
   - Apuntes de PySide:
     - Índice del archivo:                 'qt-pyside/index.md'
     - Preparación prévia:                 
-      - Introducción:                     'qt-pyside/preparacion-previa/index.md'
       - Requisitos básicos:               'qt-pyside/preparacion-previa/requisitos-basicos.md'
       - Instalación de Python:            'qt-pyside/preparacion-previa/instalacion-python.md'
       - Extensiones de VSC:               'qt-pyside/preparacion-previa/extensiones-vsc.md'
       - Instalación de PySide:            'qt-pyside/preparacion-previa/instalacion-pyside.md'
     - Conceptos básicos:
-      - Introducción:                     'qt-pyside/conceptos-basicos/index.md'
       - Qt, PySide y PyQt:                'qt-pyside/conceptos-basicos/qt-pyside-pyqt.md'
       - Aplicación base (QApplication):   'qt-pyside/conceptos-basicos/aplicacion-base-qapplication.md'
       - Superclases y subclases:          'qt-pyside/conceptos-basicos/superclases-subclases.md'
@@ -309,7 +307,6 @@ nav:
       - Señales (Signals y Slots):        'qt-pyside/conceptos-basicos/senales-receptos-signals-slots.md'
       - Componentes manipulables:         'qt-pyside/conceptos-basicos/componentes-manipulables.md'   
     - Widgets de formularios:
-      - Introducción:                     'qt-pyside/widgets-formularios/index.md'        
       - Etiquetas (QLabel):               'qt-pyside/widgets-formularios/etiquetas-qlabel.md'  
       - Casillas (QCheckBox):             'qt-pyside/widgets-formularios/casillas-qcheckbox.md'  
       - Botón radial (QRadioButton):      'qt-pyside/widgets-formularios/botones-radiales-qradiobutton.md'  
@@ -318,7 +315,6 @@ nav:
       - Campos de texto (QLineEdit):      'qt-pyside/widgets-formularios/campos-de-texto-qlineedit.md'  
       - Campos numéricos (QSpinBox):      'qt-pyside/widgets-formularios/campos-numericos-qspinbox.md'  
     - Formas de organización:             
-      - Introducción:                     'qt-pyside/formas-organizacion/index.md'   
       - Widget básico (QWidget):          'qt-pyside/formas-organizacion/widget-personalizado-qwidget.md'  
       - Layout vertical y horizontal:     'qt-pyside/formas-organizacion/layout-basico-qvboxlayaout.md'  
       - Layout en cuadrícula:             'qt-pyside/formas-organizacion/layout-cuadricula-qgridlayout.md'  
@@ -326,36 +322,30 @@ nav:
       - Layout apilado:                   'qt-pyside/formas-organizacion/layout-apilado-qstackedlayout.md'  
       - Layout con pestañas:              'qt-pyside/formas-organizacion/layout-pestanas-qtabwidget.md'  
     - Cuadros de diálogo:                 
-      - Introducción:                     'qt-pyside/cuadros-dialogo/index.md'
       - Diálogos personalizados:          'qt-pyside/cuadros-dialogo/dialogos-personalizados.md' 
       - Diálogos de mensajes:             'qt-pyside/cuadros-dialogo/dialogos-de-mensajes.md' 
       - Diálogos predeterminados:         'qt-pyside/cuadros-dialogo/dialogos-predeterminados.md' 
       - Activando las traducciones:       'qt-pyside/cuadros-dialogo/activando-traducciones.md' 
       - Diálogos específicos:             'qt-pyside/cuadros-dialogo/dialogos-especificos.md' 
     - Ventana principal:                  
-      - Introducción:                     'qt-pyside/ventana-principal/index.md'
       - Barras de menú y estado:          'qt-pyside/ventana-principal/barras-menu-estado.md'
       - Barra de herramientas:            'qt-pyside/ventana-principal/barra-herramientas.md'
       - Docks flotantes:                  'qt-pyside/ventana-principal/docks-flotantes.md'
     - Control de subventanas:             
-      - Introducción:                     'qt-pyside/control-subventanas/index.md'
       - Creación de subventanas:          'qt-pyside/control-subventanas/creacion-manejo-subventanas.md'
       - Subventanas persistentes:         'qt-pyside/control-subventanas/subventanas-persistentes.md'
     - Tematización:                       
-      - Introducción:                     'qt-pyside/tematizacion/index.md'
       - Estilos de aplicación:            'qt-pyside/tematizacion/estilos-aplicacion.md'   
       - Paletas de colores:               'qt-pyside/tematizacion/paletas-colores-qpalette.md'
       - Utilización de iconos:            'qt-pyside/tematizacion/utilizacion-de-iconos.md'
       - QSS (Qt Style Sheets):            'qt-pyside/tematizacion/qss-qt-style-sheets.md'
       - Cargando ficheros QSS:            'qt-pyside/tematizacion/cargando-ficheros-qss.md'
     - Interfaces con Qt Designer:         
-      - Introducción:                     'qt-pyside/interfaces-qt-designer/index.md'
       - Primer diseño en Qt Designer:     'qt-pyside/interfaces-qt-designer/primer-diseno-qt-designer.md'
       - Usando diseños y recursos:        'qt-pyside/interfaces-qt-designer/usando-disenos-y-recursos.md'
       - Añadiendo la lógica al diseño:    'qt-pyside/interfaces-qt-designer/anadiendo-logica-diseno.md'
       - Gestión de múltiples diseños:     'qt-pyside/interfaces-qt-designer/gestion-multiples-disenos.md'
     - Ejecutables en Windows:             
-      - Introducción:                     'qt-pyside/ejecutables-windows/index.md'
       - Ejecutables auto-py-to-exe:       'qt-pyside/ejecutables-windows/ejecutabes-auto-py-to-exe.md'
       - Comprensión del distribuible:     'qt-pyside/ejecutables-windows/comprension-distribuible.md'
     - Desarrollo de proyectos:            'qt-pyside/desarrollo-proyectos/index.md'
@@ -405,5 +395,15 @@ nav:
       - 8 editores gráficos 2D:           'escueladevideojuegos/articulos/edicion-graficos-2d-recopilacion-programas.md'
       - 5 editores de mapas y fuentes:    'escueladevideojuegos/articulos/editores-de-mapas-y-generadores-de-fuentes-recopilacion-de-programas.md'
       - 3 editores de modelaje 3D:        'escueladevideojuegos/articulos/edicion-graficos-3d-recopilacion-programas.md'
+
+  - Videoteca:
+    - Índice del archivo:                 'videoteca/index.md'
+    - Tutoriales Python:
+      - Cómo añadir Python al PATH:       'videoteca/2022/tutorial-python-001-anadir-python-path-windows.md'
+      - Ejecutar scripts en terminal:     'videoteca/2022/tutorial-python-002-ejecutar-scripts-terminal.md'
+      - Cambiar la terminal de VSC:       'videoteca/2022/tutorial-python-003-cambiar-terminal-vsc.md'
+      - Scripts relativos en VSC:         'videoteca/2022/tutorial-python-004-scripts-relativos-vsc.md'
+      - Tipos de datos esenciales:        'videoteca/2022/tutorial-python-005-tipos-esenciales.md'
+      - Uso del operador ternario:        'videoteca/2022/tutorial-python-006-operador-ternario.md'
 
   - Política de Cookies:                  'politica-de-cookies.md'
