--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -368,8 +368,12 @@ nav:
       - Memoria dinámica (Heap):          'cpp/07-punteros-memoria/07-memoria-dinamica.md'            # hasta referencias
       - Referencias y arreglos:           'cpp/07-punteros-memoria/08-referencias-arreglos.md'
     - Cadenas de caracteres:              'cpp/08-cadenas-caracteres/index.md'
-    - Programación de funciones:          'cpp/09-funciones/index.md'
-    - Function templates:                 'cpp/10-function-templates/index.md'
+    - Programación de funciones:          
+      - Primeros pasos:                   'cpp/09-funciones/01-primeros-pasos.md'
+      - Sobrecarga de funciones:          'cpp/09-funciones/02-sobrecarga-funciones.md'
+      - Funciones Lambda:                 'cpp/09-funciones/03-funciones-lambda.md'
+      - Funciones Inline:                 'cpp/09-funciones/04-funciones-inline.md'
+    - Function Templates:                 'cpp/10-function-templates/index.md'
     - Programación de clases:             
       - Primeros pasos:                   'cpp/11-clases/01-primeros-pasos.md'
       - Funciones y clases amigas:        'cpp/11-clases/02-funciones-clases-amigas.md'
@@ -378,20 +382,16 @@ nav:
       - Herencia de clases:               'cpp/11-clases/05-herencia-clases.md'
       - Polimorfismo de clases:           'cpp/11-clases/06-polimorfismo-clases.md'
       - Class templates:                  'cpp/11-clases/07-class-templates.md'
+      - Semánticas de movimiento:         'cpp/11-clases/08-semanticas-movimiento.md'
     - Punteros inteligentes:              'cpp/12-punteros-inteligentes/index.md'
     - Manejo de excepciones:              'cpp/13-manejo-excepciones/index.md'
     - Biblioteca STL:                     'cpp/14-biblioteca-stl/index.md'
     - Miscelánea:                         
-      - Conversiones y overflows:         'cpp/30-miscelanea/01-conversiones-overflow.md'
-      - Operadores bit a bit:             'cpp/30-miscelanea/02-operadores-bit-a-bit.md'
-      - Enumeradores y alias:             'cpp/30-miscelanea/03-enumeradores-alias.md'
-      - Números aleatorios:               'cpp/30-miscelanea/04-numeros-aleatorios.md'
-      - Tiempo de ejecución:              'cpp/30-miscelanea/05-tiempo-ejecucion.md'
-      - Espacio de nombres:               'cpp/30-miscelanea/06-espacio-nombres.md'
-      - Compilación y vinculación:        'cpp/30-miscelanea/07-compilacion-vinculacion.md'
-      - Semánticas de movimiento:         'cpp/30-miscelanea/08-semanticas-movimiento.md'
-      - Funciones como entidades:         'cpp/30-miscelanea/09-funciones-entidades.md'  
-      - Novedades en C++20:               'cpp/30-miscelanea/90-novedades-cpp20.md'          
+      - Operadores bit a bit:             'cpp/30-miscelanea/01-operadores-bit-a-bit.md'
+      - Enumeradores y alias:             'cpp/30-miscelanea/02-enumeradores-alias.md'
+      - Números aleatorios:               'cpp/30-miscelanea/03-numeros-aleatorios.md'
+      - Tiempo de ejecución:              'cpp/30-miscelanea/04-tiempo-ejecucion.md'
+      - Espacio de nombres:               'cpp/30-miscelanea/05-espacio-nombres.md'
 
   - Apuntes de PyGame:                    
     - Índice del archivo:                 'pygame/index.md'               
